---
source: lexer/tests/lexer.rs
description: "\npost http://localhost { \n    header \"Authorization\" \"Bearer token\" \n    body \"{neet: 1337}\" \n}"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    Post("post") at 1:0,
    Url("http://localhost") at 1:5,
    LBracket("{") at 1:22,
    Header("header") at 2:4,
    StringLiteral("\"Authorization\"") at 2:11,
    StringLiteral("\"Bearer token\"") at 2:27,
    Body("body") at 3:4,
    StringLiteral("\"{neet: 1337}\"") at 3:9,
    RBracket("}") at 4:0,
]
